# random-fullstack

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  deploy.sh  main.py  pyproject.toml
frontend/src/: App.css  App.jsx
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_main.py
